# pmo-parser

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  LICENSE  README.md  _typos.toml  pyproject.toml  ruff.toml
.github/workflows/: linting.yml  pre-commit.yml  spell_checking.yml  static_type_checking.yml  tests.yml
src/pmo_parser/: __init__.py  algorithm.py  bounding_boxes.py  cli.py  const.py  figure.py  registry.py  renderer.py  svg_utils.py  util.py
src/pmo_parser/layout/: __init__.py  base_layout.py  dl_layout.py  layout_registry.py  mupdf_layout.py
src/pmo_parser/page/: __init__.py  base_page.py  dl_page.py  mupdf_page.py
tests/: conftest.py  test_bounding_boxes.py  test_cli.py  test_figure.py  test_page_utils.py  test_pipeline_units.py  test_renderer.py  test_svg_utils.py  test_util.py
