[project]
name = "pmo-parser"
version = "1.0.0"
description = "A library to extract figures from scientific publications in PDF format."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.1",
    "pillow>=11.1.0",
    "pymupdf>=1.25.1",
    "svgelements>=1.9.6",
    "tqdm>=4.67.1",
]
license = { file = "LICENSE" }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "detect-secrets==1.5.0",
    "pre-commit==4.5.1",
    "ruff==0.15.7",
    "pyright==1.1.405",
]
dl = [
    "layoutparser[effdet,layoutmodels]>=0.3.4",
]

[project.scripts]
pmo-parser = "pmo_parser.cli:main"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
layoutparser = { git = "https://github.com/verena-hallitschke/layout-parser.git", rev = "bugfix/detectron2-weights-not-found" }

[tool.pyright]
include = ["./src"]
struct = true
exclude = [".venv"]
venvPath = "."
venv = ".venv"

[tool.pydoclint]
check-return-types = true
style = 'google'
allow-init-docstring = true

[tool.ruff.lint]
select = [
    "D",
    "ARG",
    'E',
    'F',
    'W',
    'A',
    'PLC',
    'PLE',
    'PLW',
    'I',
] # D for docstring conventions, ARG for undocumented arguments.
ignore = ["D212", "D203"]
fixable = ["ALL"]
unfixable = []
external = ["DOC"]

[tool.lint.isort]
known-third-party = ["wandb"]
